# Botbusters-FTC

./: .gitignore  LICENSE  README.md  build.common.gradle  build.gradle
FtcRobotController/: build.gradle
TeamCode/: build.gradle
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/: AutoTest.kt  BlueAuto.kt  BlueAuto_TrayOnly.kt  ConceptVuforiaNavigation.java  HALLOWIEGEHTESDIR.kt  MoveToSaveMode.kt  PresentArm.kt  PresentChassis.kt  RedAuto.kt  RedAuto_TrayOnly.kt  SkystonesOnly.kt  TeleOp.kt  TimestepMode.kt  TrayOnlyAutonomous.kt  VISION.kt  utils.kt
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/Controllers/: Arm.kt  Chassis.kt  Intake.kt  PositionChassis.kt
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/Core/: Controller.kt  EctoOpMode.kt  PID.kt  utils.kt
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/LinearOpModes/: OnlyGrabBlue.kt  OnlyGrabRed.kt
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/Systems/: Chassis.kt  Claw.kt
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/controllers/: Arm.kt  Chassis.kt  Intake.kt  PositionChassis.kt  TimestepTester.kt  TrayHolder.kt  VisionController.kt
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/core/: Controller.kt  ControllerManager.kt  Coordinate.kt  EctoLienarOpMode.kt  EctoOpMode.kt  (+12 more)
Tests/ArmKinematics/: CMakeLists.txt
Tests/ArmKinematics/src/: ScreenInfo.h  main.cpp
Tests/ArmKinematics/src/TwoJointArm/: TwoJointArm.cpp  TwoJointArm.h  TwoJointArmKinematics.h
Tests/MecanumKinematics/src/: DriveTrain.kt  main.kt
gradle/wrapper/: gradle-wrapper.properties
(+17 files in other folders)
